Copy and requirements changes

--- a/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
+++ b/sigopt-beats-vegas/SigOpt NBA OverUnder Model.ipynb
@@ -15,9 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from predictor.stand_alone import run_example\n",
@@ -35,16 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sigopt\n",
-    "# Find your SigOpt creds at https://sigopt.com/tokens\n",
+    "import os\n",
     "\n",
-    "conn = sigopt.Connection()\n",
+    "# Find your SigOpt creds at https://sigopt.com/tokens\n",
+    "if 'SIGOPT_API_TOKEN' in os.environ:\n",
+    "    SIGOPT_API_TOKEN = os.environ['SIGOPT_API_TOKEN']\n",
+    "else:\n",
+    "    SIGOPT_API_TOKEN = 'PEMFNDZGOPVUADJRFBIEAPLCICJXLYXMBNETZFGBDXFVGYIP'\n",
+    "    \n",
+    "assert SIGOPT_API_TOKEN is not None\n",
+    "conn = sigopt.Connection(client_token=SIGOPT_API_TOKEN)\n",
     "\n",
     "experiment_detail = conn.experiments(EXPERIMENT_ID).fetch()\n",
     "best_observation = experiment_detail.progress.best_observation\n",
@@ -80,29 +83,25 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0, 98)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAEACAYAAABRQBpkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFBZJREFUeJzt3X+MXeWd3/H3BwgiJAbR0JiNnYRkiYk32gAuctpG7U5L\ng8GWAl01iIBKtkvKqiEUtdUq9q6EjbcS2Ups2LIByQ0lEIUi2GoLKZYhiJ1GqdLa+VWSYMxEW354\nDGZDWHDKsjHw7R/3GK49dwbjmftrzvslHfnc5z733GeOrPnM9zm/UlVIktrtqGEPQJI0fIaBJMkw\nkCQZBpIkDANJEoaBJIkFCoMktyTZm+ThrraNSXYn+X6znNf13oYkU0l2Jjm3q31VkoeTPJbkhoUY\nmyTpzS1UZXArsKZH+x9V1apm2QaQZCVwEbASOB+4KUma/jcDl1fVCmBFkl7blCQtsAUJg6r6NvB8\nj7fSo+0C4M6qeqWqHgemgNVJTgGWVNWOpt/twIULMT5J0tz6fczg80l+mOQrSU5s2pYBT3X1mW7a\nlgG7u9p3N22SpD7rZxjcBHywqs4EngGu7+N3SZLm4Zh+bbiq/rLr5X8CvtGsTwPv7XpvedM2W/sM\nSbyhkiQdgarqNX2/oJVB6DpG0BwDOOA3gR836/cCFyc5NskHgNOA7VX1DPBCktXNAeXLgHtm+7Kq\ncmmWjRs3Dn0Mo7a4T9wf7o+Zy1wWpDJIcgcwAbwryZPARuAfJTkTeA14HPid5pf4I0nuAh4B9gOf\nqzdGeSXwVeA4YGs1ZyBJkvprQcKgqi7p0XzrHP2vA67r0f494NcXYkySpMPnFciLwMTExLCHMHLc\nJwdzfxzM/TFT3mweaRQlqXEctyQNUxJqAAeQJUljyjCQJBkGkiTDQJKEYSBJwjCQJGEYSJIwDCRJ\nGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiSMAwkSRgGkiQMA0kScMywByBJi9X09B6uuOJGAK69\n9lNs3Hg3AFu2XAXQ873D7Xek25iNz0CWpD5Zt24DW7de07y6BLgDgKOO2gzAa6/NfO9w+x3ZNo73\nGciSNEwnn/zG+ic+0Vl6vXe4/Y50G7OxMpCkPvnRj/awatWNnHvuaEwTbd36xVkrA8NAkvrkO9+B\nq6+G7duHPZKOJE4TSdKgTU3Bhz407FEcHsNAkvrEMJAkGQaSpPEKAw8gS1IfVMGJJ8ITT8BJJw17\nNB0eQJakAXv2WTj22NEJgjdjGEhSH4zTFBEYBpLUF4aBJInHHjMMJKn1pqZgxYphj+LwGQaS1Aet\nnCZKckuSvUke7mo7KckDSXYluT/JiV3vbUgylWRnknO72lcleTjJY0luWIixSdKgVcFPf9rCMABu\nBdYc0rYeeLCqTgceAjYAJPk14CJgJXA+cFOSA+e93gxcXlUrgBVJDt2mJI28PXtgyZLOMi4WJAyq\n6tvA84c0XwDc1qzfBlzYrH8SuLOqXqmqx4EpYHWSU4AlVbWj6Xd712ckaWyM2xQR9PeYwburai9A\nVT0DvLtpXwY81dVvumlbBuzuat/dtEnSWBnHMBjkM5AX9P4RmzZten19YmKCiYmJhdy8JB2xUQmD\nyclJJicnD6tvP8Ngb5KlVbW3mQJ6tmmfBt7b1W950zZbe0/dYSBJo2RqCi69dNijmPmH8rXXXjtr\n34WcJkqzHHAv8FvN+meAe7raL05ybJIPAKcB25uppBeSrG4OKF/W9RlJGhujUhm8FQtSGSS5A5gA\n3pXkSWAj8EXg7iS/DTxB5wwiquqRJHcBjwD7gc913YL0SuCrwHHA1qrathDjk7S4TU/vef1ZwMN6\nvvCB96655m527oTjj78KeE+ffuKF5y2sJY29des2sHXrNQCcddZmAH7wg87rE064hBdfvGPG+lz9\nFmIba9du5r77ruvLz3uk5rqF9SAPILde918vg/gLZVDbcIyOcZjbePll2LXrZQ54+mkO8vLLvdfn\n6rcQ2xg7VTV2S2fY42ft2vUFLxW8VMcdd+Hr68uXr6/ly9/6e6OyDcfoGIe9jeXLr6xzzllfa9eu\nr927p2v37ulau7bzeseO7/Vcn6vfQm1j1DS/O3v+XrUyGJJjuvb8gYdf7N791t4blW04Rsc47G18\n9KNLZkzJdL++775VPdfn6rdQ2xgXHjMYoOnpPaxYcSNnnw3XXz++ZbljdIyjNsYtW65i2bLxOVg7\nLHMdMzAMBuhv/qbzTNR9++Btbxv2aCS1jc9AHhE//SmceqpBIGn0GAYD9Oij8OEPD3sUkjSTYTBA\nhoGkUWUYDJBhIGlUGQYDZBhIGlWeTTQgVXDCCfDkk2+cIy1Jg+TZRCNgzx54xzsMAkmjyTAYEKeI\nJI0yw2BADANJo8wwGBDDQNIoMwwGxDCQNMoMgwExDCSNMk8tHYB9+2DpUvjFL+Ao41fSkHhq6ZDt\n2gUrVhgEkkaXv54GwCkiSaPOMBgAw0DSqDMMBsAwkDTqWvcM5OnpPQc9Kg/6/wi/b30LrrjiKsDH\n8kkaTa07m2jdug1s3XoNACedtBmA55/vvD7mmEt45ZU7ZqzP1e9wt7FmzWa2bTv4gd2SNEieTTSL\n00/vLAe885291+fqd7jbOPro+Y9XkvqldZXB9PQePvGJG/nrv4Zvf3sw00QH+i1b5jSRpOGZqzJo\nXRgAbN4M+/fDH/zBAg5Kkkac00SHePFFWLJk2KOQpNHRyjDYt6/z1DFJUkcrw8DKQJIO1sowsDKQ\npIO1NgysDCTpDa0MA6eJJOlgrQwDp4kk6WCtDAMrA0k6WN/DIMnjSf5Pkh8k2d60nZTkgSS7ktyf\n5MSu/huSTCXZmeTcfozJykCSDjaIyuA1YKKqzqqq1U3beuDBqjodeAjYAJDk14CLgJXA+cBNSXpe\nLXek9u/vLG9/+0JuVZLG2yDCID2+5wLgtmb9NuDCZv2TwJ1V9UpVPQ5MAatZQAfOJFrYiJGk8TaI\nMCjgm0l2JPls07a0qvYCVNUzwLub9mXAU12fnW7aFozHCyRppkE83ObjVfV0kr8NPJBkF52A6Daw\nu+V5vECSZup7GFTV082/f5nkv9GZ9tmbZGlV7U1yCvBs030aeG/Xx5c3bTNs2rTp9fWJiQkmJiYO\nazxWBpLaYnJyksnJycPq29dbWCc5Hjiqqn6R5B3AA8C1wDnAz6vqD5N8ATipqtY3B5C/DnyMzvTQ\nN4EPHXq/6vncwnrbNvjSl+D++4/855KkcTTXLaz7XRksBf4sSTXf9fWqeiDJd4G7kvw28ASdM4io\nqkeS3AU8AuwHPjevBxf0YGUgSTP1NQyq6v8CZ/Zo/znwT2b5zHVA3x4W7DEDSZqpdVcgWxlI0kyt\nCwMrA0maqZVhYGUgSQdrXRi8+KKVgSQdqnVhYGUgSTO1LgysDCRpptaFgZWBJM3UujCwMpCkmVoX\nBlYGkjRT68LAykCSZmpdGFgZSNJMrQoDH3kpSb21Kgx85KUk9daqMPAmdZLUW6vCwJvUSVJvrQsD\nKwNJmqlVYeBppZLUW6vCwMpAknprVRhYGUhSb60KAysDSeqtVWFgZSBJvbUqDKwMJKm3VoWBlYEk\n9daqMLAykKTeWhUGVgaS1FurwsDKQJJ6a1UYWBlIUm+tCgMrA0nqrVVhYGUgSb21KgysDCSpt9aE\ngY+8lKTZtSYMfOSlJM2uVWHg8QJJ6q01YeDzjyVpdq0JAysDSZpda8LAykCSZjdyYZDkvCSPJnks\nyRcWartWBpI0u5EKgyRHAX8CrAE+Anw6yYcXYttWBpI0u5EKA2A1MFVVT1TVfuBO4IKF2LAXnEnS\n7EYtDJYBT3W93t20zZu3opCk2Y1aGPSNlYEkze6YYQ/gENPA+7peL2/aZtg0MfH6+sSppzJx6qkw\nMdFZDjU5yT98aJJf+RXgpa72OfozOTmz3f72t7/9x6j/JDDZ670eUlWH1XEQkhwN7ALOAZ4GtgOf\nrqqdh/SrtzruSy6Bdevg0ksXarSSNF6SUFU9b8ozUpVBVb2a5PPAA3SmsG45NAhmMz29hyuuuBGA\na6/9FBs33g3Ali1XAfDggzfy2GMwMXEVy5a9px/Dl6SxNVKVweHqVRmsW7eBrVuvAeDooy/h1Vfv\nAGDJks0A7NvXeW/t2s3cd991AxytJI2GuSqDRXkAufusoTPO6CySpNktmspgenoPZ5xxI7/6q/Dl\nL8+cJjowhbRli9NEktpprspg0YQBwJlnwq23wllnDWFQkjTiWjNN9NxzcPLJwx6FJI2fRRMGVfCz\nn8G73jXskUjS+Fk0YfDSS51HWh5//LBHIknjZ9GEgVNEknTkFk0YOEUkSUduUYWBlYEkHRnDQJK0\neMLgueecJpKkI7VowsDKQJKOnGEgSVo8YeA0kSQduUUTBlYGknTkDANJ0uIJA69AlqQjtyjCwJvU\nSdL8LIow8CZ1kjQ/iyIMnCKSpPlZFGHgFJEkzc+iCQMrA0k6coaBJGlxhIFXH0vS/CyKMLAykKT5\nMQwkSYsjDJwmkqT5WRRhYGUgSfNjGEiSFkcYOE0kSfMz9mFw4CZ1VgaSdOTGPgy8SZ0kzd/Yh4E3\nqZOk+Rv7MPAmdZI0f4siDKwMJGl+DANJUv/CIMnGJLuTfL9Zzut6b0OSqSQ7k5zb1b4qycNJHkty\nw+F8j6eVStL89bsy+KOqWtUs2wCSrAQuAlYC5wM3JUnT/2bg8qpaAaxIsubNvsDKQJLmr99hkB5t\nFwB3VtUrVfU4MAWsTnIKsKSqdjT9bgcufLMvMAwkaf76HQafT/LDJF9JcmLTtgx4qqvPdNO2DNjd\n1b67aZuT00SSNH/HzOfDSb4JLO1uAgr4feAmYHNVVZJ/D1wPfHY+39dt06ZNAGzfDmefPQFMLNSm\nJWlRmJycZHJy8rD6pqr6OxogyfuBb1TVR5OsB6qq/rB5bxuwEXgC+POqWtm0Xwz8RlX9qx7bqwPj\nPvNMuPVWOOusvv8YkjTWklBVvabv+3o20SldL38T+HGzfi9wcZJjk3wAOA3YXlXPAC8kWd0cUL4M\nuGe27X/3u99n3boN7Nq1gf379/Tpp5CkduhbZZDkduBM4DXgceB3qmpv894G4HJgP3B1VT3QtP8d\n4KvAccDWqrp6lm3XkiUXsm/fHQCsWbOZbduu68vPIUmLxVyVwbyOGcylqi6b473rgBm/vavqe8Cv\nH872f/nLN9aPPvqtj0+S9IaBHDNYaElqx47vsXHj3QBs2XIVy5a9Z8ijkqTRNldlMLZhMI7jlqRh\nGsoBZEnS+DAMJEmGgSTJMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJ\nGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiSMAwkSRgGkiQMA0kShoEkCcNAkoRhIEnCMJAkYRhI\nkjAMJEkYBpIkDANJEoaBJIl5hkGSf5bkx0leTbLqkPc2JJlKsjPJuV3tq5I8nOSxJDd0tR+b5M7m\nM99J8r75jE2SdPjmWxn8CPinwP/obkyyErgIWAmcD9yUJM3bNwOXV9UKYEWSNU375cDPq+pDwA3A\nf5jn2FpjcnJy2EMYOe6Tg7k/Dub+mGleYVBVu6pqCsghb10A3FlVr1TV48AUsDrJKcCSqtrR9Lsd\nuLDrM7c1638KnDOfsbWJ/7Fncp8czP1xMPfHTP06ZrAMeKrr9XTTtgzY3dW+u2k76DNV9SrwV0n+\nVp/GJ0nqcsybdUjyTWBpdxNQwO9X1Tf6NTBmVhuSpH6pqnkvwJ8Dq7perwe+0PV6G/Ax4BRgZ1f7\nxcDN3X2a9aOBZ+f4vnJxcXFxeevLbL9X37QyeAu6/5K/F/h6ki/Rmf45DdheVZXkhSSrgR3AZcB/\n7PrMZ4D/DXwKeGi2L6oqqwZJWkDzCoMkFwI3AicD/z3JD6vq/Kp6JMldwCPAfuBz1fxJD1wJfBU4\nDthaVdua9luAryWZAp6jUzVIkgYgb/yOliS11dhdgZzkvCSPNhetfWHY4xm0JMuTPJTkJ0l+lORf\nN+0nJXkgya4k9yc5cdhjHaQkRyX5fpJ7m9et3R9JTkxyd3PB50+SfKzN+wNevwj2J80Fr19vLnJt\n9T451FiFQZKjgD8B1gAfAT6d5MPDHdXAvQL826r6CPD3gCubfbAeeLCqTqdzvGXDEMc4DFfTmZY8\noM3744/pTMGuBM4AHqXF+yPJ+4F/CZxVVR+lMz3+aVq8T3oZqzAAVgNTVfVEVe0H7qRzsVprVNUz\nVfXDZv0XwE5gOQdftHcbb1zMt+glWQ6sBb7S1dzK/ZHkBOAfVNWtAM2Fny/Q0v3ReBH4JfCOJMcA\nb6dz7VOb98kM4xYGh17M1n3RWuskORU4E/hfwNKq2gudwADePbyRDdyXgN+lc+rcAW3dHx8Afpbk\n1mbabEuS42nv/qCqngeuB56kEwIvVNWDtHif9DJuYaBGknfSuW3H1U2FcOiZAK04MyDJOmBvUy3N\ndcpxK/YHnSmQVcCXq2oV8P/oTIe08v8HQJIPAv8GeD/wHjoVwqW0eJ/0Mm5hMA103810edPWKk2p\n+6fA16rqnqZ5b5KlzfunAM8Oa3wD9nHgk0n+AvgvwD9O8jXgmZbuj93AU1X13eb1f6UTDm39/wFw\nNvA/q+rnza1u/gz4+7R7n8wwbmGwAzgtyfuTHEvnWoR7hzymYfjPwCNV9cddbfcCv9Wsfwa459AP\nLUZV9XtV9b6q+iCd/w8PVdU/B75BO/fHXuCpJCuapnOAn9DS/x+NXcDfTXJcc/fkc+icbNDmfTLD\n2F1nkOQ8OmdLHAXcUlVfHPKQBirJx4Fv0bl9+IFLzH8P2A7cBbwXeAK4qKr+aljjHIYkvwH8u6r6\nZHOTw1bujyRn0DmY/jbgL4B/QecWL63cHwBJfpfOL/5XgR8AnwWW0OJ9cqixCwNJ0sIbt2kiSVIf\nGAaSJMNAkmQYSJIwDCRJGAaSJAwDSRKGgSQJ+P8T6LS3rr0IbQAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x108603d50>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ImportError",
+     "evalue": "No module named matplotlib",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-dbd5e2e59c83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'matplotlib inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/benhsu/Developer/sigopt-examples/sigopt-beats-vegas/venv/lib/python2.7/site-packages/IPython/core/interactiveshell.pyc\u001b[0m in \u001b[0;36mmagic\u001b[0;34m(self, arg_s)\u001b[0m\n\u001b[1;32m   2158\u001b[0m         \u001b[0mmagic_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmagic_arg_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marg_s\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2159\u001b[0m         \u001b[0mmagic_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmagic_name\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprefilter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mESC_MAGIC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2160\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmagic_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2161\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2162\u001b[0m     \u001b[0;31m#-------------------------------------------------------------------------\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/benhsu/Developer/sigopt-examples/sigopt-beats-vegas/venv/lib/python2.7/site-packages/IPython/core/interactiveshell.pyc\u001b[0m in \u001b[0;36mrun_line_magic\u001b[0;34m(self, magic_name, line)\u001b[0m\n\u001b[1;32m   2079\u001b[0m                 \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'local_ns'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf_locals\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2080\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2081\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2082\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2083\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<decorator-gen-105>\u001b[0m in \u001b[0;36mmatplotlib\u001b[0;34m(self, line)\u001b[0m\n",
+      "\u001b[0;32m/Users/benhsu/Developer/sigopt-examples/sigopt-beats-vegas/venv/lib/python2.7/site-packages/IPython/core/magic.pyc\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(f, *a, **k)\u001b[0m\n\u001b[1;32m    186\u001b[0m     \u001b[0;31m# but it's overkill for just that one bit of state.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmagic_deco\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 188\u001b[0;31m         \u001b[0mcall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    189\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    190\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/benhsu/Developer/sigopt-examples/sigopt-beats-vegas/venv/lib/python2.7/site-packages/IPython/core/magics/pylab.pyc\u001b[0m in \u001b[0;36mmatplotlib\u001b[0;34m(self, line)\u001b[0m\n\u001b[1;32m     98\u001b[0m             \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Available matplotlib backends: %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mbackends_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m             \u001b[0mgui\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbackend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menable_matplotlib\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgui\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    101\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_show_matplotlib_backend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgui\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbackend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/benhsu/Developer/sigopt-examples/sigopt-beats-vegas/venv/lib/python2.7/site-packages/IPython/core/interactiveshell.pyc\u001b[0m in \u001b[0;36menable_matplotlib\u001b[0;34m(self, gui)\u001b[0m\n\u001b[1;32m   2952\u001b[0m         \"\"\"\n\u001b[1;32m   2953\u001b[0m         \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpylabtools\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2954\u001b[0;31m         \u001b[0mgui\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbackend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_gui_and_backend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgui\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpylab_gui_select\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2955\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2956\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mgui\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/benhsu/Developer/sigopt-examples/sigopt-beats-vegas/venv/lib/python2.7/site-packages/IPython/core/pylabtools.pyc\u001b[0m in \u001b[0;36mfind_gui_and_backend\u001b[0;34m(gui, gui_select)\u001b[0m\n\u001b[1;32m    274\u001b[0m     \"\"\"\n\u001b[1;32m    275\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 276\u001b[0;31m     \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    277\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    278\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mgui\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mgui\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'auto'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named matplotlib"
+     ]
     }
    ],
    "source": [
@@ -139,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -207,9 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from predictor.model import get_features\n",
@@ -284,9 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -304,9 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -332,9 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -416,5 +405,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
