--- a/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
@@ -17,18 +17,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Learn more about authenticating the SigOpt API: sigopt.com/docs/overview/authentication\n",
     "# Uncomment the following line and add your SigOpt API token:\n",
-    "SIGOPT_API_TOKEN='EUNDWYCSHKDWLUSCDRYNFKOEPPQXGHEDAXCALTMWKODNBEZM'"
+    "# SIGOPT_API_TOKEN=<YOUR API TOKEN>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -77,7 +81,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -98,7 +104,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from sklearn.linear_model import SGDClassifier\n",
@@ -121,13 +129,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of 5-folded cross-validation accuracies: 0.828330838323\n"
+      "Mean of 5-folded cross-validation accuracies: 0.839165419162\n"
      ]
     }
    ],
@@ -171,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -209,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Learn more about authenticating the SigOpt API: sigopt.com/docs/overview/authentication\n",
@@ -220,16 +234,10 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "View your experiment details at https://sigopt.com/experiment/42930\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "import math\n",
     "experiment = conn.experiments().create(\n",
@@ -274,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def sentiment_metric(positive, negative, assignments):\n",
@@ -323,17 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training model candidate 0\n"
-     ]
-    }
-   ],
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "for i in range(60):\n",
     "    print \"Training model candidate {0}\".format(i)\n",
@@ -369,7 +373,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "best_observation = experiment.progress.best_observation\n",
@@ -387,7 +393,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def sentiment_classifier(positive, negative, assignments):\n",
@@ -418,7 +426,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -451,7 +461,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -462,7 +474,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -497,5 +511,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
