add project field to experiment create

--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -65,6 +65,7 @@
     "import math\n",
     "experiment = conn.experiments().create(\n",
     "    name=\"Timing Test Experiment\",\n",
+    "    project=\"sigopt-examples\",\n",
     "    parameters=[\n",
     "        {'name': 'x', 'type': 'int', 'bounds': {'min': 0, 'max': 2}},\n",
     "        {'name': 'y', 'type': 'int', 'bounds': {'min': 0, 'max': 2}},\n",
