--- a/jupyter-notebook-example/SigOpt_Introduction.ipynb
+++ b/jupyter-notebook-example/SigOpt_Introduction.ipynb
@@ -83,6 +83,7 @@
     "\n",
     "experiment = conn.experiments().create(\n",
     "  name='SigOpt Introduction Example',\n",
+    "  project='sigopt-examples',\n",
     "  parameters=obj.parameters,\n",
     "  observation_budget=SIGOPT_TOTAL,\n",
     ")\n",
