--- a/multimetric-demo/multimetric_intro.ipynb
+++ b/multimetric-demo/multimetric_intro.ipynb
@@ -87,6 +87,7 @@
     "\n",
     "experiment_meta = {\n",
     "    'name': 'SigOpt Multimetric Demo 2D Quadratic Polynomial (Python)',\n",
+    "    'project': 'sigopt-examples',\n",
     "    'metrics': metrics,\n",
     "    'parameters': parameters,\n",
     "    'type': 'offline',\n",
