--- a/multimetric-demo/svm_example.ipynb
+++ b/multimetric-demo/svm_example.ipynb
@@ -198,6 +198,7 @@
    "source": [
     "svm_score_time_meta = {\n",
     "    'name': 'SigOpt Multimetric Demo - Balancing Score vs. Training Time (python)',\n",
+    "    'project': 'sigopt-examples',\n",
     "    'metrics': [{'name': 'score'}, {'name': 'training time'}],\n",
     "    'parameters': [\n",
     "        {'name': 'log_gamma', 'bounds': {'min': numpy.log(.01), 'max': numpy.log(100)}, 'type': 'double'},\n",
