--- a/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
@@ -242,6 +242,7 @@
     "import math\n",
     "experiment = conn.experiments().create(\n",
     "    name='Sentiment LR Classifier',\n",
+    "    project='sigopt-examples',\n",
     "    parameters=[{ \n",
     "        'name':'l1_coef', \n",
     "        'type': 'double', \n",
