--- a/multimetric-demo/finding_multiple_optima.ipynb
+++ b/multimetric-demo/finding_multiple_optima.ipynb
@@ -89,6 +89,7 @@
     "\n",
     "multimodal_first_solution_meta = {\n",
     "    'name': 'SigOpt Multimetric Demo - Single Metric Optimization (python)',\n",
+    "    'project': 'sigopt-examples',\n",
     "    'metrics': [{'name': 'value'}],\n",
     "    'parameters': [\n",
     "        {'name': 'x1', 'bounds': {'min': -1.0, 'max': 1.0}, 'type': 'double'},\n",
