--- a/random-forest/python/Random Forest.ipynb
+++ b/random-forest/python/Random Forest.ipynb
@@ -160,7 +160,7 @@
     "# Re-fetch the best observed value and assignments\n",
     "best_assignments = conn.experiments(experiment.id).best_assignments().fetch().data[0].assignments\n",
     "\n",
-    "# To wrap up the Experiment, fit the RandomForest on the best assigments\n",
+    "# To wrap up the Experiment, fit the RandomForest on the best assignments\n",
     "# and train on all available data\n",
     "rf = RandomForestClassifier(\n",
     "    n_estimators=best_assignments['n_estimators'],\n",
