add metrics field and objectives to experiment create"

--- a/multimetric-demo/multimetric_intro.ipynb
+++ b/multimetric-demo/multimetric_intro.ipynb
@@ -81,8 +81,8 @@
     "    },\n",
     "]\n",
     "metrics = [\n",
-    "    {'name': 'f1'},\n",
-    "    {'name': 'f2'},\n",
+    "    {'name': 'f1', 'objective': 'maximize'},\n",
+    "    {'name': 'f2', 'objective': 'maximize'},\n",
     "]\n",
     "\n",
     "experiment_meta = {\n",
