--- a/multimetric-demo/svm_example.ipynb
+++ b/multimetric-demo/svm_example.ipynb
@@ -199,7 +199,10 @@
     "svm_score_time_meta = {\n",
     "    'name': 'SigOpt Multimetric Demo - Balancing Score vs. Training Time (python)',\n",
     "    'project': 'sigopt-examples',\n",
-    "    'metrics': [{'name': 'score'}, {'name': 'training time'}],\n",
+    "    'metrics': [\n",
+    "        {'name': 'score'},\n",
+    "        {'name': 'training time'},\n",
+    "    ],\n",
     "    'parameters': [\n",
     "        {'name': 'log_gamma', 'bounds': {'min': numpy.log(.01), 'max': numpy.log(100)}, 'type': 'double'},\n",
     "        {'name': 'log_C', 'bounds': {'min': numpy.log(.01), 'max': numpy.log(100)}, 'type': 'double'},\n",
