--- a/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
+++ b/estimated-training-time/How are My Hyperparameters Affecting My Training Time?.ipynb
@@ -66,6 +66,7 @@
     "experiment = conn.experiments().create(\n",
     "    name=\"Timing Test Experiment\",\n",
     "    project=\"sigopt-examples\",\n",
+    "    metrics=[dict(name=\"score\", objective=\"maximize\")],\n",
     "    parameters=[\n",
     "        {'name': 'x', 'type': 'int', 'bounds': {'min': 0, 'max': 2}},\n",
     "        {'name': 'y', 'type': 'int', 'bounds': {'min': 0, 'max': 2}},\n",
