--- a/jupyter-notebook-example/SigOpt_Introduction.ipynb
+++ b/jupyter-notebook-example/SigOpt_Introduction.ipynb
@@ -84,6 +84,7 @@
     "experiment = conn.experiments().create(\n",
     "  name='SigOpt Introduction Example',\n",
     "  project='sigopt-examples',\n",
+    "  metrics=[dict(name='value', objective='maximize')],\n",
     "  parameters=obj.parameters,\n",
     "  observation_budget=SIGOPT_TOTAL,\n",
     ")\n",
