--- a/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
+++ b/text-classifier/python/SigOpt Text Classifier Walkthrough.ipynb
@@ -243,7 +243,7 @@
     "experiment = conn.experiments().create(\n",
     "    name='Sentiment LR Classifier',\n",
     "    project='sigopt-examples',\n",
-    "    metrics=[dict(name='value', objective='maximize')],\n",
+    "    metrics=[dict(name='cv_scores', objective='maximize')],\n",
     "    parameters=[{ \n",
     "        'name':'l1_coef', \n",
     "        'type': 'double', \n",
