rename last values

--- a/multimetric-demo/finding_multiple_optima.ipynb
+++ b/multimetric-demo/finding_multiple_optima.ipynb
@@ -90,7 +90,7 @@
     "multimodal_first_solution_meta = {\n",
     "    'name': 'SigOpt Multimetric Demo - Single Metric Optimization (python)',\n",
     "    'project': 'sigopt-examples',\n",
-    "    'metrics': [{'name': 'value', 'objective': 'maximize'}],\n",
+    "    'metrics': [{'name': 'multimodal_function_value', 'objective': 'maximize'}],\n",
     "    'parameters': [\n",
     "        {'name': 'x1', 'bounds': {'min': -1.0, 'max': 1.0}, 'type': 'double'},\n",
     "        {'name': 'x2', 'bounds': {'min': -1.0, 'max': 1.0}, 'type': 'double'},\n",
