address pr review

--- a/multimetric-demo/svm_example.ipynb
+++ b/multimetric-demo/svm_example.ipynb
@@ -178,7 +178,7 @@
     "* the average of the cross-validated scores, and\n",
     "* the average of the time required to train each of them.\n",
     "\n",
-    "We also report an estimate of the standard deviation for both of these quantities.  Note that, because we (presumably) want to minimize the training time, we will negate that value in observations.\n",
+    "We also report an estimate of the standard deviation for both of these quantities.\n",
     "\n",
     "The [parameters of interest](http://scikit-learn.org/stable/auto_examples/svm/plot_rbf_parameters.html) in this problem are\n",
     "\n",
@@ -200,8 +200,8 @@
     "    'name': 'SigOpt Multimetric Demo - Balancing Score vs. Training Time (python)',\n",
     "    'project': 'sigopt-examples',\n",
     "    'metrics': [\n",
-    "        {'name': 'score'},\n",
-    "        {'name': 'training time'},\n",
+    "        {'name': 'score', 'objective': 'maximize'},\n",
+    "        {'name': 'training time', 'objective': 'minimize'},\n",
     "    ],\n",
     "    'parameters': [\n",
     "        {'name': 'log_gamma', 'bounds': {'min': numpy.log(.01), 'max': numpy.log(100)}, 'type': 'double'},\n",
@@ -263,7 +263,7 @@
     "            },\n",
     "            {\n",
     "                'name': 'training time',\n",
-    "                'value': -numpy.mean(all_training_times),\n",
+    "                'value': numpy.mean(all_training_times),\n",
     "                'value_stddev': numpy.sqrt(numpy.var(all_training_times) / num_folds)\n",
     "            },\n",
     "        ],\n",
